# reasoning_core

./: .gitignore  GALLERY.md  README.md  TASK_AUTHORING_GUIDE.md  pyproject.toml
reasoning_core/: __init__.py  collect.py  database_invest.py  downstream_eval.py  evaluate_node.py  function_generator.py  functions.db  generation_worker.py  library_function.py  my_task_test.py  planet.com  program_composition_task.py  rcr_causal_1.csv  run.py  run_generate.sh  score_answer_history.py  stateful_execution.py  template.py  type_inhabilitation.py  view_db.py  zero_shot_eval.py
reasoning_core/environments/reasoning_core_env/: README.md  pyproject.toml  reasoning_core_env.py
reasoning_core/environments/reasoning_core_env/outputs/evals/reasoning-core-env--gpt-4.1-mini/19ee3b06/: metadata.json  results.jsonl
reasoning_core/openreward/reasoning_core_env/: Dockerfile  README.md  requirements.txt  server.py
reasoning_core/primeintellect/reasoning_core_env/: pyproject.toml  reasoning_core_env.py
reasoning_core/tasks/: _causal_utils.py  _causal_utils_advanced.py  _causal_utils_claude.py  _logic_utils.py  _reasoning_gym.py  _sat_graph.py  arithmetics.py  binding.py  causal_reasoning._py  causal_reasoning.py  code_diff.py  code_execution.py  code_program_synthesis.py  coding.py  constraint_satisfaction.py  coreference.py  equation_system.py  formal_maths.py  grammar.py  graph_operations.py  knowledge.py  logic.py  navigation.py  planning.py  qstr.py  regex.py  regex_following.py  rung3_reasoning.py  sequential_induction.py  set_operations.py  table_qa.py  tracking.py
reasoning_core/test_dir/: file_0.txt  file_1.txt  file_2.txt  file_3.txt  file_4.txt
reasoning_core/training/: run_sft.py
reasoning_core/utils/: udocker_process.py
tests/: smoke_test.py  test_score_answer_versioning.py  test_tasks.py
