#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reasoning_core"
dynamic = ["version"]
readme = "README.md"
description = "Procedural symbolic data generator for pre-training, also including RL environments"

dependencies = [
    "gramforge",
    "faker",
    "inflection",
    "rapidfuzz",
    "unified-planning[pyperplan]",
    "tarski",
    "reasoning_gym",
    "verifiers",
    "prime",
    "tiktoken",
    "networkx",
    "z3-solver",
    "pooch",
    "requests",
    "beautifulsoup4",
    "easydict",
    "appdirs",
    "regex",
    "num2words",
    "tqdm",
    "timeout_decorator",
    "timeoutcontext",
    "pandas",
    "pyyaml",
    "tabulate",
    "duckdb",
    "funcy",
    "multiprocess",
    "xpflow",
    "exrex",
    "nltk",
    "pgmpy",
    "numpy",
    "sympy",
    "pyparsing",
    "whatthepatch",
    "lazy_object_proxy",
    "udocker"
]

[tool.setuptools.packages.find]
include = ["reasoning_core*"]

[tool.setuptools.package-data]
"reasoning_core" = ["resources/**"]

[tool.hatch.version]
path = "reasoning_core/__init__.py"
