#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reasoning_core"
dynamic = ["version"]
readme = "README.md"
description = "Procedural data generators for symbolic pre-training, also including RL environments"

dependencies = [
    "gramforge",
    "faker",
    "inflection",
    "rapidfuzz",
    "unified-planning[pyperplan]",
    "tarski",
    "verifiers",
    "tiktoken",
    "networkx",
    "z3-solver",
    "pooch",
    "requests",
    "beautifulsoup4",
    "easydict",
    "appdirs",
    "regex",
    "num2words",
    "tqdm",
    "timeout_decorator",
    "timeoutcontext",
    "pandas",
    "pyyaml",
    "tabulate",
    "duckdb",
    "funcy",
    "multiprocess",
    "xpflow",
    "exrex",
    "nltk",
    "wordfreq",
    "pgmpy",
    "numpy",
    "sympy",
    "pyparsing",
    "whatthepatch",
    "lazy_object_proxy",
    "udocker"
]

[project.optional-dependencies]
prime = ["prime"]
reasoning_gym = ["reasoning_gym"]

[tool.setuptools.packages.find]
include = ["reasoning_core*"]

[tool.setuptools.package-data]
"reasoning_core" = ["resources/**"]

[tool.hatch.version]
path = "reasoning_core/__init__.py"
