[project]
name = "reasoning-core-env"
description = "Formally verifiable reasoning on general domains (planning, logic, math) with procedurally generated data."
tags = ["reasoning","math", "logic", "planning", "syntax", "train"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3",
    "reasoning-core==0.1.13"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["reasoning_core_env.py"]
