[project]
name = "reasoning-core-env"
description = "Formally verifiable reasoning on general symbolic domains (planning, logic, math...) with procedurally generated data."
tags = ["symbolic", "train", "reasoning","math", "logic", "planning", "syntax"]
version = "1.0.3"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.4",
    "reasoning-core>=0.1.15"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["reasoning_core_env.py"]
